construction du home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,13 @@
 <div class="col s12 m7">
-  <h2 class="header">COVOITURAGE</h2>
+  <div class="row">
+    <h2 class="header">COVOITURAGE</h2>
+
+    <div class="col offset-s6 offset-m6 ">
+      <button class="btn purple waves-effect waves-light">Login</button>&nbsp;&nbsp;
+      <button class="btn indigo waves-effect waves-light">register</button>
+    </div>
+  </div>
+
   <div class="card horizontal">
     <div class="card-image">
       <img src="../../../assets/images/hom.jpg" id="img">
@@ -61,9 +69,62 @@
 
 
       </div>
-      <div class="card-action">
-        <a href="#">This is a link</a>
-      </div>
+
+        <div id="results">
+          <ul class="collection">
+            <li class="collection-item">
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </li>
+
+            <li class="collection-item">
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </li>
+
+            <li class="collection-item">
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </li>
+
+            <li class="collection-item">
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </li>
+
+            <li class="collection-item">
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </li>
+
+            <li class="collection-item">
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </li>
+
+            <li class="collection-item">
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </li>
+
+            <li class="collection-item">
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </li>
+
+
+          </ul>
+        </div>
+
     </div>
   </div>
+</div>
 </div>
